--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,177 @@
   background-color: var(--background);
   ;
 }
+
+/* WORK */
+
+.work-card {
+  background-color: var(--background);
+  width: 29rem;
+  margin-bottom: 1.5rem;
+
+
+}
+
+img.work {
+  width: 29rem;
+  height: 33rem;
+
+
+
+
+  border-radius: 4%;
+
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--background);
+}
+
+.portfolio:hover {
+  color: #111;
+  background: greenyellow;
+  box-shadow: 0 0 10px rgb(201, 198, 195);
+}
+
+
+
+
+
+/* STICKY SOCIAL MEDIA*/
+.sticky-icon {
+  z-index: 1;
+  position: fixed;
+  top: 30%;
+  right: 0%;
+  width: 220px;
+  display: flex;
+  flex-direction: column;
+}
+
+.sticky-icon a {
+  transform: translate(160px, 0px);
+  border-radius: 50px 0px 0px 50px;
+  text-align: left;
+  margin: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px;
+  font-size: 20px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  transition: all 0.8s;
+}
+
+.sticky-icon a:hover {
+  color: #FFF;
+
+}
+
+
+
+
+
+.Instagram {
+  background-color: var(--background);
+  color: #FFF;
+}
+
+.LinkedIn {
+  background-color: var(--background);
+  color: #FFF;
+}
+
+.Github {
+  background-color: var(--background);
+  color: #FFF;
+}
+
+.Message {
+  background-color: var(--background);
+  color: #FFF;
+}
+
+.sticky-icon a i {
+  background-color: #FFF;
+  height: 40px;
+  width: 40px;
+  color: var(--background);
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  margin-right: 20px;
+  transition: all 0.5s;
+}
+
+
+.sticky-icon a i.fa-instagram {
+  background-color: #FFF;
+  color: #1a1a1a;
+}
+
+.sticky-icon a i.fa-linkedin {
+  background-color: #FFF;
+  color: #1a1a1a;
+}
+
+.sticky-icon a i.fa-github {
+  background-color: #FFF;
+  color: #1a1a1a;
+}
+
+.sticky-icon a i.fa-message {
+  background-color: #FFF;
+  color: #1a1a1a;
+}
+
+
+.fas fa-shopping-cart {
+  background-color: #FFF;
+}
+
+#myBtn {
+  height: 50px;
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  text-align: center;
+  padding: 10px;
+  text-align: center;
+  line-height: 40px;
+  border: none;
+  outline: none;
+  background-color: #1e88e5;
+  color: white;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.fa-arrow-circle-up {
+  font-size: 30px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1688px) {
+
+
+  .work {
+    align-items: center;
+  }
+
+  .card {
+    margin: 1rem;
+    width: 22rem;
+
+  }
+
+}
