--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   min-height: 100vh;
   color: var(--text);
   background-color: var(--background);
-  width: 100%;
+  height: 100vh;
 }
 
 /* HEADER */
@@ -22,23 +22,23 @@ img.personal {
 /* BIO */
 .bio-container {
   background-color: rgb(20, 20, 20);
-  /* padding: 15px; */
-  color: white;
-  position: fixed;
-  top: 30%;
+  padding: 15px; 
+   color: white; 
+   position: fixed; 
+   top: 30%;
   left: 0;
   width: 245px;
-  /* Adjust the width according to your preference */
-  overflow-y: auto;
-  /* Add scroll if the content exceeds the height */
-}
+
+   overflow-y: auto; 
+
+} 
 
 /* WORK */
 
-.work {
+/* .work {
   display: flex;
   justify-content: flex-start;
-}
+} */
 .work-card {
   background-color: var(--background);
   width: 29rem;
@@ -56,11 +56,11 @@ img.work {
 
   border-radius: 4%;
 
-}
+/* }
 .work.main-container {
   margin-left: 260px;
   /* Adjust the margin to give space for the Bio component */
-}
+} 
 .main-container {
   display: flex;
   flex-direction: column;
@@ -234,22 +234,27 @@ textarea {
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 1688px) {
-  /* .about {
-    margin-top: 4rem;
-    margin-bottom: 3rem;
-    font-size: x-small;
-    margin-left: 1.5rem;
-    margin-right: 3rem;
-    text-align: center;
-  } */
+  .bio-container {
+    width: 100%;
+    /* Use full width for smaller screens */
+    position: relative;
+    top: 0;
+    /* Reset the top position */
+  }
+
+  .main-container {
+    margin-top: 50px;
+    /* Adjust as needed to provide space for the bio */
+  }
 
   .work {
-    align-items: center;
+    display: flex;
+    justify-content: center;
   }
 
   .card {
-    /* margin: 1rem; */
     width: 15rem;
+    margin: auto;
   }
 
   img.work {
@@ -262,17 +267,33 @@ textarea {
   img.personal {
     height: 2.5rem;
     width: 4.5rem;
-    /* margin-left: 1rem; */
-
   }
 
   .sticky-icon {
     z-index: 1;
-    position: fixed;
-    top: 60%;
+    position:fixed;
+    top: 35%;
     right: 0%;
-    width: 220px;
+    width: 205px;
     display: flex;
     flex-direction: column;
   }
-}
+
+     .form-container {
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+     }
+  
+     .label {
+       text-align: center;
+     }
+  
+     .input,
+     .textarea {
+       width: 90%;
+       /* Use full width for smaller screens */
+       max-width: 50rem;
+       /* Set a maximum width if needed */
+     }
+     }
