--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   background-color: var(--background);
   height: 100vh;
   max-width: 100%;
+    margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+      /* Prevent horizontal scrolling */
 }
 
 /* HEADER */
