--- a/src/App.css
+++ b/src/App.css
@@ -12,33 +12,36 @@
   max-width: 100%;
     margin: 0;
   padding: 0;
+  font-family:'Times New Roman', Times, serif;
   /* overflow-x: hidden;  */
 }
 
 /* HEADER */
 img.personal {
   height: 5rem;
-  margin-left: 3rem;
+  margin-left: 1rem;
   margin-top: 3rem;
-  margin-bottom: 2rem;
+
+
 }
 
 /* BIO */
 .bio-container {
   background-color: rgb(20, 20, 20);
-  padding: 15px; 
+  padding: 10px; 
    color: white; 
    position: fixed; 
    top: 30%;
   left: 0;
   width: 245px;
   text-align: center;
-  font-size: smaller;
-
-   overflow-y: auto; 
+  overflow-y: auto; 
 
 } 
 
+.bio {
+  font-size: small;
+}
 /* WORK */
 
 /* .work {
@@ -252,6 +255,11 @@ textarea {
 
 }
 
+/* STORE */
+.store {
+  text-align: center;
+  font-size: large;
+}
 
 
 #back-to-top.show {
