--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ border-radius: 4%;
 /* WORK MODAL */
 
 .modal {
-  background-color: #202020;
+  background-color: #1d1d1d;
 }
 
 .main-container {
