--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .root {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   color: var(--text);
   background-color: var(--background);
   height: 100vh;
